--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -15,7 +15,12 @@
             <div class="row book-grid">
                 <!-- Create a card display for each book -->
                 {% for book in book_list %}
+                <!-- If only 1 book in book_list use full screen width -->
+                {% if book_list|length == 1 %}
+                <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
+                {% else %}
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                {% endif %}
                     <div class="card">
                         <div class="card-body">
                             <a href="{% url 'book_detail' book.slug %}" class="book-link no-underline">
