--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -59,6 +59,24 @@
                 {% endif %}
             </div>
 
+            <!--Add to Bookshelf-->
+
+            {% if request.user.is_authenticated %}
+                {% if in_bookshelf %}
+                    <form action="{% url 'remove_from_bookshelf' book.slug %}" method="post">
+                        {% csrf_token %}
+                        <button id="remove-from-bookshelf" data-book-slug="{{ book.slug }}">Remove from Bookshelf</button>
+                    </form>
+                {% else %}
+                    <form action="{% url 'add_to_bookshelf' book.slug %}" method="post">
+                        {% csrf_token %}
+                        <button id="add-to-bookshelf" data-book-slug="{{ book.slug }}">Add to Bookshelf</button>
+                    </form>
+                {% endif %}
+            {% else %}
+                <p>Please <a href="{% url 'account_login' %}">login</a> to add to your bookshelf.</p>
+            {% endif %}
+
             <hr>
             <h3>Description</h3>
             <p>{{ book.description|safe }}</p>
