--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -21,65 +21,69 @@
         </div>
         <div class="col-md-8 mb-4">
             <h1 class="title">{{ book.title }}</h1>   
-            <p><strong>Author:</strong> {{ book.author }}</p>
-            <p><strong>Published Year:</strong> {{ book.published_year }}</p>
-            
-            <!-- Display books stars -->
-            <div class="book-star-ratings">
-                <div class="star-ratings-background">
-                    <ul class="book-stars">
-                        <li><i class="far fa-star book-rating-icon"></i></li>
-                        <li><i class="far fa-star book-rating-icon"></i></li>
-                        <li><i class="far fa-star book-rating-icon"></i></li>
-                        <li><i class="far fa-star book-rating-icon"></i></li>
-                        <li><i class="far fa-star book-rating-icon"></i></li>
-                    </ul>
-                </div>
-                <div class="star-ratings-foreground">
-                    <ul class="book-stars">
-                        <li><i class="fa-star book-rating-star far" data-value="1"></i></li>
-                        <li><i class="fa-star book-rating-star far" data-value="2"></i></li>
-                        <li><i class="fa-star book-rating-star far" data-value="3"></i></li>
-                        <li><i class="fa-star book-rating-star far" data-value="4"></i></li>
-                        <li><i class="fa-star book-rating-star far" data-value="5"></i></li>
-                    </ul>    
-                </div>            
-            </div>
-
-            <!-- Display books text rating -->
-            <div id="average-rating">
-                {% if average_rating == None %}
-                    <p>No ratings</p>
-                {% else %}
-                    {% if total_ratings == 1 %}
-                        <p>{{ average_rating }} from {{ total_ratings }} rating</p>
-                    {% else %}
-                        <p>{{ average_rating }} from {{ total_ratings }} ratings</p>
-                    {% endif %}
-                {% endif %}
-            </div>
-
-            <!--Add to Bookshelf-->
-
-            {% if request.user.is_authenticated %}
-                {% if in_bookshelf %}
-                    <form action="{% url 'remove_from_bookshelf' book.slug %}" method="post">
-                        {% csrf_token %}
-                        <button id="remove-from-bookshelf" data-book-slug="{{ book.slug }}">Remove from Bookshelf</button>
-                    </form>
-                {% else %}
-                    <form action="{% url 'add_to_bookshelf' book.slug %}" method="post">
-                        {% csrf_token %}
-                        <button id="add-to-bookshelf" data-book-slug="{{ book.slug }}">Add to Bookshelf</button>
-                    </form>
-                {% endif %}
-            {% else %}
-                <p>Please <a href="{% url 'account_login' %}">login</a> to add to your bookshelf.</p>
-            {% endif %}
-
             <hr>
-            <h3>Description</h3>
-            <p>{{ book.description|safe }}</p>
+            <div class="details">
+                <p><strong>Author:</strong> {{ book.author }}</p>
+                <p><strong>Published Year:</strong> {{ book.published_year }}</p>
+                
+                <!-- Display books stars -->
+                <div class="book-star-ratings">
+                    <div class="star-ratings-background">
+                        <ul class="book-stars">
+                            <li><i class="far fa-star book-rating-icon"></i></li>
+                            <li><i class="far fa-star book-rating-icon"></i></li>
+                            <li><i class="far fa-star book-rating-icon"></i></li>
+                            <li><i class="far fa-star book-rating-icon"></i></li>
+                            <li><i class="far fa-star book-rating-icon"></i></li>
+                        </ul>
+                    </div>
+                    <div class="star-ratings-foreground">
+                        <ul class="book-stars">
+                            <li><i class="fa-star book-rating-star far" data-value="1"></i></li>
+                            <li><i class="fa-star book-rating-star far" data-value="2"></i></li>
+                            <li><i class="fa-star book-rating-star far" data-value="3"></i></li>
+                            <li><i class="fa-star book-rating-star far" data-value="4"></i></li>
+                            <li><i class="fa-star book-rating-star far" data-value="5"></i></li>
+                        </ul>    
+                    </div>            
+                </div>
+
+                <!-- Display books text rating -->
+                <div id="average-rating">
+                    {% if average_rating == None %}
+                        <p>No ratings</p>
+                    {% else %}
+                        {% if total_ratings == 1 %}
+                            <p>{{ average_rating }} from {{ total_ratings }} rating</p>
+                        {% else %}
+                            <p>{{ average_rating }} from {{ total_ratings }} ratings</p>
+                        {% endif %}
+                    {% endif %}
+                </div>
+
+                <!--Add to Bookshelf-->
+                <div id="bookshelf-buttons">
+                    {% if request.user.is_authenticated %}
+                        {% if in_bookshelf %}
+                            <form action="{% url 'remove_from_bookshelf' book.slug %}" method="post">
+                                {% csrf_token %}
+                                <button id="remove-from-bookshelf" class="btn btn-primary" data-book-slug="{{ book.slug }}">Remove from Bookshelf</button>
+                            </form>
+                        {% else %}
+                            <form action="{% url 'add_to_bookshelf' book.slug %}" method="post">
+                                {% csrf_token %}
+                                <button id="add-to-bookshelf" class="btn btn-primary" data-book-slug="{{ book.slug }}">Add to Bookshelf</button>
+                            </form>
+                        {% endif %}
+                    {% else %}
+                        <p>Please <a href="{% url 'account_login' %}">login</a> to add to your bookshelf.</p>
+                    {% endif %}
+                </div>
+
+                <hr>
+                <h3>Description</h3>
+                <p>{{ book.description|safe }}</p>
+            </div>
         </div>
     </div>
 
