--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -392,6 +392,22 @@ footer {
     border-color: #0d6efd;
 }
 
+.details {
+    position: relative;
+}
+
+#bookshelf-buttons {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+@media (max-width: 768px) {
+    #bookshelf-buttons {
+        position: static;
+        margin-top: 10px;
+    }
+}
 
 
 
