Update the displayed books heading in homepage html

--- a/books/templates/homepage.html
+++ b/books/templates/homepage.html
@@ -27,7 +27,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="container mt-5">
-            <h1 class="mb-4">Latest Books</h1>
+            <h1 class="mb-4">Top Rated Books</h1>
             <!-- If there are no books to display -->
             {% if not book_list %}
                 <p>No books available at the moment.</p>
