--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -221,12 +221,7 @@
 {% endblock %}
 
 {% block extras %}
-<script>
-    const isAuthenticated = {{ user.is_authenticated|yesno:"true,false" }};
-    function goBack() {
-        window.history.back();
-    }
-</script>
 <script src="{% static 'js/comments.js' %}"></script>
 <script src="{% static 'js/ratings.js' %}"></script>
+<script src="{% static 'js/back_button.js' %}"></script>
 {% endblock %}
