--- a/about_us/templates/about_us/about_us.html
+++ b/about_us/templates/about_us/about_us.html
@@ -3,16 +3,12 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-<div class="container mt-4">
+<div class="about-container container mt-4">
     <div class="row">
         <div class="col-12">
             <div class="text-wrapper">
                 <h2 class="about-title">{{ about_us.title }}</h2>
-                {% if "placeholder" in about_us.profile_image.url %}
-                <img src="{% static 'images/default.jpg' %}" class="img-fluid rounded-image" width="30%" alt="placeholder image">
-                {% else %}
                 <img src="{{ about_us.profile_image.url }}" class="img-fluid rounded-image" width="30%" alt="{{ about_us.title }}">
-                {% endif %}
                 {{ about_us.content | safe }}
             </div>
         </div>
