--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -371,6 +371,10 @@ footer {
 }
 
 /* About us html styles */
+.about-container {
+    max-width: 1000px;
+}
+
 .about-title { 
     margin-bottom: 20px;
 }
