--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -183,6 +183,51 @@ footer {
     --bs-gutter-x: 0rem;
 }
 
+/* Missing any books styles */
+.missingbook-banner {
+    position: relative;
+    max-height: 600px;
+    margin-top: 35px;
+}
+
+.image-position {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+}
+
+.missing-image-container {
+    position: relative;
+    width: 100%;
+}
+
+.missingbook-image-1,
+.missingbook-image-2 {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    min-height: 300px;
+}
+
+.missingbook-text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    justify-content: space-around;
+    justify-items: center;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+    padding: 20px;
+    width:75%;
+    max-width: 90%;
+    text-align: center;
+    z-index: 1;
+}
+
+.hidden-container {
+    display:none;
+}
+
 /* book_list template */
 /* list of displayed books section */
 .display-books {
@@ -485,6 +530,25 @@ footer {
         background-color: rgba(255, 255, 255, 0.85); /* Semi-transparent background */
         width: 60%; 
         max-width: 600px; 
+    }
+
+    /* Homepage Missing any books styles */
+    .image-position {
+        flex-direction: row;
+    }
+
+    .missing-image-container {
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .missingbook-image-1,
+    .missingbook-image-2 {
+        max-height: 600px;
+        height: 100%;
     }
 
     /* Book details page styles */
