Add a max-width to the book_list template

--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <!-- book_list.html content starts here -->
-<div class="container-fluid">
+<div class="container-fluid display-books">
     <div class="row">
         <!-- Books section -->
         <div class="container mt-5">
