--- a/user_profile/templates/profile_page.html
+++ b/user_profile/templates/profile_page.html
@@ -87,6 +87,27 @@
                 </div>
                 {% endfor %}
             </div>
+
+            <!-- Pagination Controls -->
+            {% if books_in_bookshelf.paginator.num_pages > 1 %}
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        <!-- Previous page link -->
+                        {% if books_in_bookshelf.has_previous %}
+                        <li class="page-item">
+                            <a href="?page={{ books_in_bookshelf.previous_page_number }}" class="page-link"> &laquo; PREV </a>
+                        </li>
+                        {% endif %}
+
+                        <!-- Next page link -->
+                        {% if books_in_bookshelf.has_next %}
+                        <li class="page-item">
+                            <a href="?page={{ books_in_bookshelf.next_page_number }}" class="page-link"> NEXT &raquo;</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            {% endif %}
         </div>
     </div>
 </div>
