--- a/user_profile/templates/profile_page.html
+++ b/user_profile/templates/profile_page.html
@@ -50,18 +50,19 @@
                                     <div class="bookshelf-form-container">
                                         
                                         <!-- Form to update the status -->
-                                        <form class="status-form status-form-left" method="post" action="{% url 'profile' %}">
+                                        <form class="status-form status-form-left" method="post" action="{% url 'profile' %}" id=statusForm>
                                             {% csrf_token %}
                                             <input type="hidden" name="book_slug" value="{{ book.slug }}">
                                             <input type="hidden" name="status_form" value="status_form">
 
                                             {% for item in books_with_status %}
                                                 {% if item.book.slug == book.slug %}
-                                                    <p>Status: {{ item.status }}</p>
+                                                    <p class="current-status">Status: {{ item.status }}</p>
                                                 {% endif %}
                                             {% endfor %}
 
                                             <select name="status" class="form-control mb-2 status-select">
+                                                <option value="" disabled selected>Set Status ▼</option>
                                                 {% for item in books_with_status %}
                                                     {% if item.book.slug == book.slug %}
                                                         {% for status_choice in status_choices %}
