--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -472,11 +472,31 @@ footer {
 .btn-primary:hover {
     background-color: #853434;
     border-color: #853434;
+    transform: scale(1.05); 
+}
+
+.btn-primary:focus {
+    background-color: #853434;
+    border-color: #853434;
 }
 
 .btn-secondary {
     background-color: #B58FFF;
     border-color: #B58FFF;
+}
+
+.btn-secondary:hover {
+    background-color: #a782f1;
+    border-color: #a782f1;
+    transform: scale(1.05); 
+}
+
+.btn-danger:hover {
+    transform: scale(1.05); 
+}
+
+.margin-right{
+    margin-right: 20px;
 }
 
 .details {
@@ -493,7 +513,6 @@ footer {
     border: 3px solid #B58FFF;
     color: #333;
 }
-
 
 /* Profile page styles */
 .users-bookshelf {
