--- a/user_profile/templates/profile_page.html
+++ b/user_profile/templates/profile_page.html
@@ -10,6 +10,7 @@
                 <h1>User Profile</h1>
                 
                 <form method="post" class="profile-form">
+                    <input type="hidden" name="profile_form" value="profile_form">
                     {{ form | crispy }}
                     {% csrf_token %}
                     <button class="btn btn-secondary mb-3" type="submit">Save Changes</button>
@@ -53,7 +54,7 @@
                                     <div class="bookshelf-form-container">
                                         
                                         <!-- Form to update the status -->
-                                        <form class="status-form status-form-left" method="post" action="{% url 'profile' %}" id=statusForm>
+                                        <form class="status-form status-form-left" method="post" action="{% url 'profile' %}">
                                             {% csrf_token %}
                                             <input type="hidden" name="book_slug" value="{{ book.slug }}">
                                             <input type="hidden" name="status_form" value="status_form">
