--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -24,6 +24,7 @@
             <hr>
             <div class="details">
                 <p><strong>Author:</strong> {{ book.author }}</p>
+                <p><strong>Genre:</strong> {{ book.genre }}</p>
                 <p><strong>Published Year:</strong> {{ book.published_year }}</p>
                 
                 <!-- Display books stars -->
