--- a/books/templates/homepage.html
+++ b/books/templates/homepage.html
@@ -28,7 +28,7 @@
     <div class="row remove-gutters">
         <div class="introduction-text">
             <h2>Discover Your Next Adventure with PageTurner</h2>
-            <p>Join Page Turner and immerse yourself in a universe of stories. Discover new authors, discuss beloved classics, and keep track of your reading journey with ease</p>
+            <p>Join Page Turner and immerse yourself in a universe of stories. Discover new authors, interact with our expanding library, and keep track of your reading journey with ease</p>
             {% if not user.is_authenticated %}
                 <a class="btn btn-primary" {% if request.path == signup_url %}active{% endif %} aria-current="page"
                 href="{% url 'account_signup' %}">Create an account now!</a>
