--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
             <a class="navbar-brand navbar-brand-custom" href="{{ home_url }}">
                 <img src="{% static 'images/page-turner-logo.png' %}" alt='Page Turner' class="logo">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
@@ -123,7 +123,7 @@
                     <img  src="{% static 'images/page-turner-logo.png' %}" alt='Page Turner'>
                 </div>
                 <p class="site-description">
-                    PageTurner is a dynamic platform where book lovers connect 
+                    Page Turner is a dynamic platform where book lovers connect 
                     to discover new reads, share insights, and build virtual 
                     bookshelves to track their literary adventures.
                 </p>
@@ -171,6 +171,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
     <!-- Base JS -->
     <script src="{% static 'js/base.js' %}"></script>
 
