--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,16 @@
 /* styles.css */
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
+/*Google fonts import*/
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+/*Asterisk wildcard selector to override default styles added by browser*/
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #F0F0EA;
